cod-tools (unreleased)

  * Changed:
    - cif_validate:
      - single quotes are now used to delimit both the data names and the
        data values in validation messages;
      - updating the standard uncertainty validation logic to ignore
        non-numeric values.
    - cif_molecule and cif_p1:
      - prefix for preserved original CIF data items was changed from
        '_cod_src_' to '_[local]_cod_src_'.
  * Deprecated:
    - cif_Fcalc:
      - the '--dump-xyz-coordinates', '--dump-Cromer-Mann',
        '--dump-cell-parameters', '--dump-cell-xyz-coordinates',
        '--dump-sorted-F', '--dump-atoms-and-neighbors',
        '--dump-test-Fhkl' options.
  * Removed:
    - COD::CIF::Tags::COD:
     - removing the _cod_superseeded_by, _cod_published_source and
       _cod_est_spacegroup_name_H-M tags since the associated data items
       were never used nor properly defined in the dictionary.
  * Fixed:
    - cif_fix_values:
      - looped temperature, density and refinement weighting scheme values
        no longer produce a malformed CIF file.
    - COD::CIF::Tags::Manage:
      - preventing from creation of data blocks with disallowed names.
    - COD::DateTime:
      - switched from '\d' to '[0-9]' in regular expressions to match
        digits in dates.

cod-tools (2.3)

  * Added:
    - cif2xyz:
      - command line option --add-xyz-header to produce XYZ format as
        defined in http://openbabel.org/wiki/XYZ_%28format%29.
    - cif_cod_check:
      - the --check-pd-block-relations and its inverse options that control
        the execution of checks related to powder diffraction blocks.
    - cif_filter:
      - the --exclude-placeholder-tags, --placeholder-tag-list options
        and a related subroutine that enables the removal of data items
        with placeholder values.
      - the --exclude-redundant-chemical-names option and a related
        subroutine that enables the removal of data items related to