@@ -1,5 +1,7 @@
 cod-tools (unreleased)
 
+  * Added:
+    - COD::CIF::DDL::Validate module.
   * Changed:
     - cif_validate:
       - single quotes are now used to delimit both the data names and the
